--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,12 +10,19 @@ services:
     restart: unless-stopped
     tty: true
     environment:
-      SERVICE_NAME: app
-      SERVICE_TAGS: dev
+      - SERVICE_NAME= app
+      - SERVICE_TAGS= dev
+      - DB_HOST=db
+      - DB_PORT=3306
+      - DB_DATABASE=quizdb
+      - DB_USERNAME=root
+      - DB_PASSWORD=docker
     working_dir: /var/www
     volumes:
       - ./:/var/www
       - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
+    depends_on:
+      - db
     networks:
       - app-network
 
@@ -47,9 +54,9 @@ services:
       # default port 3306
       - "3307:3306"
     environment:
-      MYSQL_DATABASE: laravel
+      MYSQL_DATABASE: quizdb
       # replace with your own mysql password here
-      MYSQL_ROOT_PASSWORD: YOUR_MYSQL_PASSWORD
+      MYSQL_ROOT_PASSWORD: docker
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
     volumes:
